# mb-os

./: .gitignore  MEMORY_SYSTEM.md  README.md  boot_from_disk.ps1  build_iso.sh  clipboard_bridge.py  find_vm.ps1  finish_build.sh  fix_resolution.sh  flash_admin.ps1  flash_usb.ps1  install_desktop.sh  install_launchers.sh  patch_calamares.sh  patch_full.sh  patch_installer.sh  patch_iso.sh  patch_qt6.sh  patch_ssh.sh  patch_wifi.sh  repair_boot.ps1  restart_vm.ps1  run_qemu.sh  setup_hyperv.ps1  setup_vm.ps1  ssh_scan.sh  start_hyperv.ps1  test_qemu.sh  test_system.sh  test_urls.sh  validate_pkgs.sh  vm_diagnose.ps1  write_settings.py  write_usb.ps1
browser/: CMakeLists.txt  main.cpp  main.qml
calamares/: settings.conf
calamares/branding/mb-os/: branding.desc
calamares/modules/: bootloader.conf  partition.conf  shellprocess.conf  unpackfs.conf
config/: fix-efi-boot.sh  generate_logo.py  launch-antigravity  mb-browser  mb-db-init  mb-os-xinitrc  xorg.conf
daemon/: memory_daemon.py
grub-theme/: dejavu_11.pf2  fix_bg.sh  generate_assets.sh  theme.txt
gui/: CMakeLists.txt  DockButton.qml  MemoryGraph.qml  ThemeManager.cpp  ThemeManager.h  main.cpp  main.qml  resources.qrc
installer/: fix-grub.sh  mb-context-menu.sh  mb-installer.sh
scripts/: face-auth.py  launch-whatsapp
